# N-Puzzle

./: CMakeLists.txt  Makefile  TODO  build.sh
example/: puzzle3_hard.txt  puzzle4.txt  puzzle5.txt
include/: AStarAlgorithm.hpp  AStarSearch.hpp  Direction.hpp  FringePatternDatabase.hpp  HammingDistance.hpp  Heuristic.hpp  LinearConflict.hpp  LinearConflicts.hpp  ManhattanDistance.hpp  MisplacedTiles.hpp  NPuzzle.hpp  NPuzzleFactory.hpp  Node.hpp  Puzzle.hpp  Search.hpp
resources/: puzzle3.txt  puzzle3_hardbis.txt  puzzle3bibis.txt  puzzle3bisbisbis.txt  puzzle4.txt  puzzle4_unsolvablebis.txt
src/: AStarAlgorithm.cpp  AStarSearch.cpp  FringePatternDatabase.cpp  HammingDistance.cpp  Heuristic.cpp  LinearConflict.cpp  LinearConflicts.cpp  ManhattanDistance.cpp  MisplacedTiles.cpp  NPuzzle.cpp  NPuzzleApp.cpp  NPuzzleFactory.cpp  Node.cpp  Puzzle.cpp  Search.cpp  main.cpp
